--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.31)
-project(SkipListDB)
+project(ArborDB)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(SkipListDB main.cpp
-)
+add_executable(ArborDB main.cpp
+        db.hpp)
